extended histogram with axes and made some small layout modifications

--- a/Applications/DataExplorer/InfoVis/Interaction Test.html
+++ b/Applications/DataExplorer/InfoVis/Interaction Test.html
@@ -11,6 +11,8 @@ their base data accessors to access present categories.
 		<style>
 			body {
 				margin: 0px;
+				font-family: sans-serif;
+				font-size: 12px;
 			}
 
 			div.group {
