--- a/Applications/DataExplorer/InfoVis/Histogram.html
+++ b/Applications/DataExplorer/InfoVis/Histogram.html
@@ -4,20 +4,37 @@
 		<meta charset="utf-8"></meta>
 		<title>Histogram</title>
 		<style>
+			body {
+				font-family: sans-serif;
+				font-size: 12px;
+			}
+
 			input.verticalSlider {
 				-webkit-appearance: slider-vertical;
+				vertical-align: top;
 				width: 20px;
-				height: 200px;
+				height: 300px;
 			}
 
 			rect.partiallyShownContextBar, rect.contextBar{
 				fill-opacity: 0.05;
 				stroke: black;
+				stroke-opacity: 0.25;
 			}
 
 			rect.barOfInterest {
-				fill-opacity: 1.0;
+				stroke: white;
+			}
 
+			.axis text {
+				font: 10px sans-serif;
+			}
+
+			.axis path,
+			.axis line {
+				fill: none;
+				stroke: #000;
+				shape-rendering: crispEdges;
 			}
 		</style>
 
