--- a/Applications/DataExplorer/InfoVis/TimeSeriesVisualization.html
+++ b/Applications/DataExplorer/InfoVis/TimeSeriesVisualization.html
@@ -4,6 +4,12 @@
 		<meta charset="utf-8"></meta>
 		<title>TimeSeriesVisualization</title>
 		<style>
+
+			body {
+				font-family: sans-serif;
+				font-size: 12px;
+			}
+			
 			iframe {
 				min-width: 750px;
 				min-height: 330px;
