added infobox on hovering elements

--- a/Applications/DataExplorer/InfoVis/Histogram.html
+++ b/Applications/DataExplorer/InfoVis/Histogram.html
@@ -37,6 +37,7 @@
 				shape-rendering: crispEdges;
 			}
 		</style>
+		<link type="text/css" rel="stylesheet" href="./svghoverinfo.css">
 
 		<script type="text/javascript" src="http://mbostock.github.com/d3/d3.js"></script>
 		<script type="text/javascript" src="./inheritance.js"></script>
@@ -44,6 +45,8 @@
 		<script type="text/javascript" src="./SVGCanvas.js"></script>
 		<script type="text/javascript" src="./HistogramCanvas.js"></script>
 		<script type="text/javascript" src="./callSequencer.js"></script>
+		<script type="text/javascript" src="./svghoverinfo.js"></script>
+		<script type="text/javascript" src="./interval.js"></script>
 		<script type="text/javascript">
 
 			"use strict";
